syntax="proto3";

import weak "forpost.proto";

option optimize_for = LITE_RUNTIME;
//option go_package = "forpost_server";

option (c2s_base) = 150;
option (s2c_base) = 150;


enum ActionsTypeEnum {
    UNKNOWN_STATE       = 0;
	ACTIVATION          = 1;
	ACTIVATED           = 2;
	ACTIVATION_BREAK    = 3;
	DEACTIVATION        = 4;
	DEACTIVATED         = 5;
	DEACTIVATION_BREAK  = 6;	
}

enum GameModeEnum {
	UNKNOWN_MODE        = 0;
	LASERTAG_MODE       = 1;
	PAINTBALL_MODE      = 2;
}

// 1. Сообщение, которое отправляется если игрок производит какие-то действия с устройсвом
message bobmProActions{
  //---------------------	
  option (c2s_id) = 1;
  //---------------------
          fixed32  deviceUniquId   =   1;
  ActionsTypeEnum  ActionsType     =   2;
           uint32  playerId        =   3;

}	

// 2. Сообщение, которое отправляется в случае взрыва бомбы
message bombProHasBeenExploded{
  //---------------------	
  option (c2s_id) = 2;
  //---------------------
  fixed32          deviceUniquId   =   1;
}

// 3. Сообщение, которое отправляется в случае установки бомбы на платформу
message bombProHasBeenInstalled{
  //---------------------	
  option (c2s_id) = 3;
  //---------------------
  fixed32 deviceUniquId   =   1;
   uint32 platformNomber  =   2;
}

// 4. Сообщение, которое отправляется в случае снятия бомбы с платформы
message bombProHasBeenDeinstalled{
  //---------------------	
  option (c2s_id) = 4;
  //---------------------
  fixed32          deviceUniquId   =   1;
}

// 5. Сообщение отправляетя в случае не санкционированного снятия с платформы
//(если) игра бомба в режиме "Активированна"
message bombProCheatHasBeenDetected{
  //---------------------	
  option (c2s_id) = 5;
  //---------------------
  fixed32          deviceUniquId   =   1;
}

// 6. Двунаправленное сообщение с настройками устройства
message bobmProSettings{
  //---------------------	
  option (c2s_id) = 6;
  option (s2c_id) = 6;
  //---------------------
  fixed32 deviceUniquId    =   1;
   uint32 activationTime   =   2; // [2..60s] default [3s]
   uint32 deactivationTime =   3; // [2..60s] default [10s]
   uint32 timeToExplode    =   4; // [10..600s] default [60s]
   uint32 colorOfMiners    =   5; // [RED,BLUE,GREEN,YELLOW] default [RED]
   uint32 outputExplodePower = 6; // [0..20dbm] default [20dbm]
   uint32 damageValueHP     = 7;  // [0..999HP]
   GameModeEnum gameMode  = 8;  // [True..False]
}

// 7. Сообщение от сервера, которое прерывае процедуру активации/деактивации
//например если игрока убили
message bobmProBreakActions{
  option (s2c_id) = 7;	
}

// 8. Сообщение от сервера к бомбе, со списком id игроков, которые участвуют в игре.
// Отправляется после старта в игру
//message array {
//	uint32 id 	= 1; // id игрока, это сообщение - элемент массива
//}

message bombPlayersTable {
	//---------------------
	option (s2c_id) = 8;
	//---------------------
	repeated uint32 bombPlayers = 1;
 }
